local-services/wireguard/endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: wireguard
subsets:
  - addresses:
      - ip: 192.168.1.22
    ports:
      - port: 51821
        protocol: TCP
