local-services/wireguard/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: wireguard
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
